Migrate `sqlx` SQLite to `hiqlite` (#592)
* add hiqlite db + config + startup + migrations

* integrate hiqlite into startup + migration routine, add justfile starter

* migration of `ApiKeyEntity`

* migration of `LatestAppVersion`

* migration of `AuthProvider`

* migration of `Client`

* fix some `db_version` checks with different DBs

* migration of `ClientDyn`

* migration of `Colors`

* adopt changes from `hiqlite` nightly

* migration of `DbVersion`

* migration of `DeviceEntity`

* split `User::save()` for `txn` usage

* migratio of `Group`

* migration of `Jwks`

* migration of `Logo`

* migration of `MagicLink`

* migration of `Password`, `PasswordPolicy` `RecentPasswordsEntity`

* migration of `RefreshToken`

* migration of `RefreshTokenDevice`

* migration of `Role`

* migration of `Scope`

* migration of `Session`

* migration of `UserAttrConfigEntity` +`UserAttrValueEntity`

* migration of `User`

* merge from master

* migration of `UserValues`

* migration of `PasskeyEntity`

* migration of `WebId`

* migration of `Event`

* `models` finished apart from on purpose left-overs + track what is still left

* migration of `schedulers::devices_cleanup()`

* migration of `schedulers::dyn_client_cleanup()`

* migration of `schedulers::events_cleanup()`

* migration of `schedulers::jwks_cleanup()`

* migration of `schedulers::magic_link_cleanup()`

* migration of `schedulers::password_expiry_checker()`

* migration of `schedulers::sessions_cleanup()`

* migration of `schedulers::refresh_tokens_cleanup()`

* migration of `schedulers::user_expiry_checker()`

* remove `time` dependency from `schedulers`

* remove `time` dependency from `service`

* fix missing `else` in db check

* impl helper fn `migrate_sqlite_to_hiqlite()`

* impl helper fn `migrate_postgres_to_hiqlite()` + `migrate_hiqlite_to_sqlx`

* migration "finished" until testing and validation can begin - cleanup

--- a/src/schedulers/Cargo.toml
+++ b/src/schedulers/Cargo.toml
@@ -7,14 +7,15 @@ license.workspace = true
 
 [dependencies]
 rauthy-common = { path = "../common" }
+rauthy-error = { path = "../error" }
 rauthy-models = { path = "../models" }
 rauthy-service = { path = "../service" }
 
 actix-web = { workspace = true }
 chrono = { workspace = true }
 cron = { workspace = true }
+hiqlite = { workspace = true }
 semver = { workspace = true }
 sqlx = { workspace = true }
-time = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
