fix errors + clippy

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -410,7 +410,7 @@ HQL_NODES="
 # Max DB connections - irrelevant for SQLite (default: 5)
 #DATABASE_MAX_CONN=5
 
-# If specified, the current Database, set with DATABASE_URL, will be DELETED and OVERWRITTEN with a migration from the
+# If specified, the currently configured Database will be DELETED and OVERWRITTEN with a migration from the
 # given database with this variable. Can be used to migrate between different databases.
 # !!! USE WITH CARE !!!
 #MIGRATE_DB_FROM=sqlite:data/rauthy.db
