make migrations `postgres` -> `hiqlite` + `hiqlite` -> `postgres` work

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -406,6 +406,7 @@ HQL_NODES="
 #
 #DATABASE_URL=sqlite::memory:
 #DATABASE_URL=sqlite:data/rauthy.db
+DATABASE_URL=postgresql://rauthy:123SuperSafe@$DEV_HOST:5432/rauthy
 
 # Max DB connections - irrelevant for SQLite (default: 5)
 #DATABASE_MAX_CONN=5
@@ -421,7 +422,7 @@ HQL_NODES="
 #
 # To use the EXPERIMENTAL Hiqlite database, set to `true`
 # default: false
-#HIQLITE=true
+HIQLITE=true
 
 # The data dir hiqlite will store raft logs and state machine data in.
 # default: data
