remove feature separation for `postgres` and `sqlite` everywhere

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -406,7 +406,7 @@ HQL_NODES="
 #
 #DATABASE_URL=sqlite::memory:
 #DATABASE_URL=sqlite:data/rauthy.db
-DATABASE_URL=postgresql://rauthy:123SuperSafe@$DEV_HOST:5432/rauthy
+DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 
 # Max DB connections - irrelevant for SQLite (default: 5)
 #DATABASE_MAX_CONN=5
