rework migrations between differerent databases (#601)
* extract `migrate_to` fn's to make them reusable

* fix errors + clippy

* `impl<'r> FromRow<'r, SqliteRow> for Event`

* leftover errors + make clippy happy

* move all new insert fns into separate module

* move `init_prod` migrations into separate module

* cleanup old migration impls

* add a catch block in `main.rs` to catch misconfiguration early

* fix some query errors and remove migration from `AppState` and use dedicated `migrate()` in `database.rs` instead

* make migrations `postgres` -> `hiqlite` + `hiqlite` -> `postgres` work

* remove feature separation for `postgres` and `sqlite` everywhere

* cleanup `justfile`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -406,11 +406,12 @@ HQL_NODES="
 #
 #DATABASE_URL=sqlite::memory:
 #DATABASE_URL=sqlite:data/rauthy.db
+DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 
 # Max DB connections - irrelevant for SQLite (default: 5)
 #DATABASE_MAX_CONN=5
 
-# If specified, the current Database, set with DATABASE_URL, will be DELETED and OVERWRITTEN with a migration from the
+# If specified, the currently configured Database will be DELETED and OVERWRITTEN with a migration from the
 # given database with this variable. Can be used to migrate between different databases.
 # !!! USE WITH CARE !!!
 #MIGRATE_DB_FROM=sqlite:data/rauthy.db
@@ -421,7 +422,7 @@ HQL_NODES="
 #
 # To use the EXPERIMENTAL Hiqlite database, set to `true`
 # default: false
-#HIQLITE=true
+HIQLITE=true
 
 # The data dir hiqlite will store raft logs and state machine data in.
 # default: data
