all tests are green again

--- a/rauthy.test.cfg
+++ b/rauthy.test.cfg
@@ -6,6 +6,8 @@
 # !!! DO NOT USE IN PRODUCTION !!!
 DEV_MODE=true
 
+DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
+
 AUTH_HEADERS_ENABLE=true
 
 PASSWORD_RESET_COOKIE_BINDING=true
