don't log the banner with `LOG_FMT=json`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -991,7 +991,7 @@ LOG_LEVEL_ACCESS=Basic
 # as Text anyway. If you need to auto-parse events, please consider
 # using an API token and listen ot them actively.
 # default: text
-#LOG_FMT=text
+#LOG_FMT=json
 
 #####################################
 ################ MFA ################
