add `USER_REG_OPEN_REDIRECT` config var and check during POST user registration

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -15,7 +15,7 @@ DEV_MODE=true
 # with SSR.
 # You only need this value, if you want to work with the auth
 # provider login while running the UI in dev mode. Point it to the
-# full address, where ever your UI is running.
+#full address, where ever your UI is running.
 # This will only be respected when `DEV_MODE == true` as well.
 #DEV_MODE_PROVIDER_CALLBACK_URL="localhost:5173"
 
@@ -69,6 +69,23 @@ USERINFO_STRICT=true
 #example.com
 #evil.net
 #"
+
+# If set to `true`, any validation of the `redirect_uri` provided during
+# a user registration will be disabled.
+# Clients can use this feature to redirect the user back to their application
+# after a successful registration, so instead of ending up in the user
+# dashboard, they come back to the client app that initiated the registration.
+#
+# The given `redirect_uri` will be compared against all registered
+# `client_uri`s and will be silently removed, if there is no match. However,
+# this check will prevent ephemeral clients from using this feature. Only
+# if you need this feature in combination with ephemeral clients, you should
+# set this option to `true`. Otherwise it is advised to set the correct
+# Client URI in the admin UI. The `redirect_uri` will be allowed if it starts
+# with any registered `client_uri`.
+#
+# default: false
+#USER_REG_OPEN_REDIRECT=true
 
 # If set to true, a violation inside the CSRF protection middleware based
 # on Sec-* headers will block invalid requests. Usually you always want this
