adjust description for `USER_REG_OPEN_REDIRECT`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -77,9 +77,9 @@ USERINFO_STRICT=true
 # dashboard, they come back to the client app that initiated the registration.
 #
 # The given `redirect_uri` will be compared against all registered
-# `client_uri`s and will be silently removed, if there is no match. However,
+# `client_uri`s and will throw an error, if there is no match. However,
 # this check will prevent ephemeral clients from using this feature. Only
-# if you need this feature in combination with ephemeral clients, you should
+# if you need it in combination with ephemeral clients, you should
 # set this option to `true`. Otherwise it is advised to set the correct
 # Client URI in the admin UI. The `redirect_uri` will be allowed if it starts
 # with any registered `client_uri`.
