--- a/src/error/Cargo.toml
+++ b/src/error/Cargo.toml
@@ -27,6 +27,7 @@ serde_json = { workspace = true }
 serde_json_path = { workspace = true }
 spow = { workspace = true }
 sqlx = { workspace = true }
+svg-hush = { workspace = true }
 time = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
