--- a/src/models/Cargo.toml
+++ b/src/models/Cargo.toml
@@ -69,6 +69,7 @@ serde_json_path = { workspace = true }
 serde_with = { workspace = true }
 spow = { workspace = true }
 sqlx = { workspace = true }
+svg-hush = { workspace = true }
 strum = { workspace = true }
 time = { workspace = true }
 tracing = { workspace = true }
