document single container image + backup values

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -212,6 +212,11 @@ HQL_BACKUP_CRON="0 30 2 * * * *"
 # default: 30
 HQL_BACKUP_KEEP_DAYS=30
 
+# Backups older than the configured days will be cleaned up locally
+# after each `Client::backup()` and the cron job `HQL_BACKUP_CRON`.
+# default: 3
+HQL_BACKUP_KEEP_DAYS_LOCAL=3
+
 # If you ever need to restore from a backup, the process is simple.
 # 1. Have the cluster shut down. This is probably the case anyway, if
 #    you need to restore from a backup.
@@ -226,6 +231,7 @@ HQL_BACKUP_KEEP_DAYS=30
 #HQL_S3_URL=https://s3.example.com
 #HQL_S3_BUCKET=my_bucket
 #HQL_S3_REGION=example
+#HQL_S3_PATH_STYLE=true
 #HQL_S3_KEY=s3_key
 #HQL_S3_SECRET=s3_secret
 
