update deps + major version bumps + nightly version + fix issues

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -363,22 +363,23 @@ HQL_NODES="
 ############ DATABASE ###############
 #####################################
 
-# The database driver will be chosen at runtime depending on the given DATABASE_URL format. Examples:
-# Sqlite: 'sqlite:data/rauthy.db' or 'sqlite::memory:'
-# Postgres: 'postgresql://User:PasswordWithoutSpecialCharacters@localhost:5432/DatabaseName'
+# Connection string to connect to a Postgres database.
+# This will be ignore as long as `HIQLITE=true`.
 #
-# NOTE: The password in this case should be alphanumeric. Special characters could cause problems in the connection
-# string.
+# Format: 'postgresql://User:PasswordWithoutSpecialCharacters@localhost:5432/DatabaseName'
 #
-# CAUTION: To make the automatic migrations work with Postgres15, when you do not want to just use the `postgres` user,
-# You need to have a user with the same name as the DB / schema. For instance, the following would work without
-# granting extra access to the `public` schema which is disabled by default since PG15:
+# NOTE: The password in this case should be alphanumeric.
+# Special characters could cause problems in the connection string.
+#
+# CAUTION: To make the automatic migrations work with Postgres 15+,
+# when you do not want to just use the `postgres` user, You need
+# to have a user with the same name as the DB / schema. For instance,
+# the following would work without granting extra access to the
+# `public` schema which is disabled by default since PG15:
 # database: rauthy
 # user: rauthy
 # schema: rauthy with owner rauthy
 #
-#DATABASE_URL=sqlite::memory:
-#DATABASE_URL=sqlite:data/rauthy.db
 DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 
 # Max DB connections for the Postgres pool.
@@ -386,10 +387,15 @@ DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 # default: 5
 #DATABASE_MAX_CONN=5
 
-# If specified, the currently configured Database will be DELETED and OVERWRITTEN with a migration from the
-# given database with this variable. Can be used to migrate between different databases.
+# If specified, the currently configured Database will be
+# DELETED and OVERWRITTEN with a migration from the given
+# database with this variable. Can be used to migrate between
+# different databases.
+# To migrate from Hiqlite, use the `sqlite:` prefix.
+#
 # !!! USE WITH CARE !!!
-#MIGRATE_DB_FROM=sqlite:data/rauthy.db
+#
+#MIGRATE_DB_FROM=sqlite:data/state_machine/db/hiqlite.db
 #MIGRATE_DB_FROM=postgresql://postgres:123SuperSafe@localhost:5432/rauthy
 
 # Hiqlite is the default database for Rauthy.
@@ -404,7 +410,7 @@ DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 
 # The file name of the SQLite database in the state machine folder.
 # default: hiqlite.db
-#HQL_FILENAME_DB=my_hiqlite.db
+#HQL_FILENAME_DB=hiqlite.db
 
 # If set to `true`, all SQL statements will be logged for debugging
 # purposes.
