--- a/Dockerfile_builder
+++ b/Dockerfile_builder
@@ -49,9 +49,10 @@ RUN <<EOF
 set -e
 
 rustup target add aarch64-unknown-linux-gnu
+rustup component add rustfmt
 
 apt update
-apt install -y gcc-aarch64-linux-gnu
+apt install -y clang gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
 apt-get clean
 EOF
 
