fix typo in changelog

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -416,11 +416,11 @@ HQL_LOG_STATEMENTS=true
 # The size of the pooled connections for local database reads.
 #
 # Do not confuse this with a pool size for network databases, as it
-# is much more efficient. You cant' really translate between them,
-# because it depends on many factors, but if you assume a factor of
-# 10 is a good start. This means, if you needed a (read) pool size
-# of 40 connections for something like a postgres before, you should
-# start at a `read_pool_size` of 4.
+# is much more efficient. You can't really translate between them,
+# because it depends on many things, but assuming a factor of 10 is
+# a good start. This means, if you needed a (read) pool size of 40
+# connections for something like a postgres before, you should start
+# at a `read_pool_size` of 4.
 #
 # Keep in mind that this pool is only used for reads and writes will
 # travel through the Raft and have their own dedicated connection.
