--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -624,7 +624,7 @@ EMAIL_SUB_PREFIX="Rauthy IAM"
 # TLS fails. It will never allow an unencrypted connection.
 # You might want to set `SMTP_DANGER_INSECURE=true` if you
 # need this for local dev.
-SMTP_URL=localhost
+SMTP_URL=alpha.kurosaki.cx
 #SMTP_USERNAME=
 #SMTP_PASSWORD=
 # Format: "Rauthy <rauthy@localhost.de>"
@@ -1031,7 +1031,7 @@ LISTEN_ADDRESS=0.0.0.0
 
 # The listen ports for HTTP / HTTPS, depending on the activated 'LISTEN_SCHEME'
 # default: 8080
-LISTEN_PORT_HTTP=8080
+LISTEN_PORT_HTTP=8888
 # default: 8443
 LISTEN_PORT_HTTPS=8443
 
@@ -1043,7 +1043,7 @@ LISTEN_SCHEME=http_https
 # The Public URL of the whole deployment
 # The LISTEN_SCHEME + PUB_URL must match the HTTP ORIGIN HEADER later on, which is especially important when running
 # rauthy behind a reverse proxy. In case of a non-standard port (80/443), you need to add the port to the PUB_URL
-#PUB_URL=localhost:8443
+PUB_URL=localhost:8888
 
 # default value: number of available physical cores
 HTTP_WORKERS=1
