--- a/src/models/Cargo.toml
+++ b/src/models/Cargo.toml
@@ -87,6 +87,7 @@ atrium-identity = { workspace = true }
 atrium-oauth-client = { workspace = true }
 
 hickory-resolver = { workspace = true }
+jose-jwk = "0.1.2"
 
 [dev-dependencies]
 pretty_assertions = "1"
