--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -11,12 +11,14 @@ rauthy-error = { path = "../error" }
 actix-web = { workspace = true }
 argon2 = { workspace = true }
 base64 = { workspace = true }
+brotli = { workspace = true }
 chacha20poly1305 = { workspace = true }
 chrono = { workspace = true }
 cidr = { workspace = true }
 flume = { workspace = true }
 gethostname = { workspace = true }
 lazy_static = { workspace = true }
+libflate = { workspace = true }
 once_cell = { workspace = true }
 rand = { workspace = true }
 rand_core = { workspace = true }
