--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -11,12 +11,14 @@ rauthy-error = { path = "../error" }
 actix-web = { workspace = true }
 argon2 = { workspace = true }
 base64 = { workspace = true }
+brotli = { workspace = true }
 chacha20poly1305 = { workspace = true }
 chrono = { workspace = true }
 cidr = { workspace = true }
 flume = { workspace = true }
 gethostname = { workspace = true }
 lazy_static = { workspace = true }
+libflate = { workspace = true }
 once_cell = { workspace = true }
 rand = { workspace = true }
 rand_core = { workspace = true }
@@ -25,6 +27,9 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
+
+[build-dependencies]
+chrono = { version = "0.4", default-features = false, features = ["now"] }
 
 [dev-dependencies]
 pretty_assertions = "1"
