--- a/src/api/Cargo.toml
+++ b/src/api/Cargo.toml
@@ -28,6 +28,7 @@ tokio = { workspace = true }
 utoipa = { workspace = true }
 utoipa-swagger-ui = { workspace = true }
 validator = { workspace = true }
+serde = { version = "1.0.217", features = ["derive"] }
 
 [dev-dependencies]
 pretty_assertions = "1"
