migrate `/users/regsiter` UI to new template setup

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -76,7 +76,7 @@ USERINFO_STRICT=true
 # Can be used when 'OPEN_USER_REG=true' to restrict the domains for a registration. For instance, set it to
 # 'USER_REG_DOMAIN_RESTRICTION=gmail.com' to allow only registrations with 'user@gmail.com'.
 # default: ''
-#USER_REG_DOMAIN_RESTRICTION=@some-mail-domain.com
+#USER_REG_DOMAIN_RESTRICTION=some-mail-domain.com
 
 # If `OPEN_USER_REG=true`, you can blacklist certain domains
 # on the open registration endpoint.
