--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.25.0",
+    "@internationalized/date": "^3.5.5",
     "@sveltejs/adapter-static": "^3.0.0",
     "@sveltejs/kit": "^2.8.3",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
