--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1248,3 +1248,34 @@ WEBAUTHN_RENEW_EXP=2160
 # With this option active, rauthy will ignore any password expiry set by the password policy for Webauthn users.
 # default: true
 WEBAUTHN_NO_PASSWORD_EXPIRY=true
+
+#####################################
+######### User Pictures #############
+#####################################
+
+# The storage type for user pictures.
+# By default, they are saved inside the Database, which is not ideal.
+# If you only have a couple hundred users, this will be fine, but
+# anything larger should use an S3 bucket if available. For single
+# instance deployments, file storage to local disk is available
+# as well, but this must not be used with multi replica / HA
+# deployments.
+#
+# Available options: db file s3
+# Default: db
+#PICTURE_STORAGE_TYPE="db"
+
+# If `PICTURE_STORAGE_TYPE=file`, the path where pictures will be
+# saved can be changed with this value.
+# default: ./pictures
+#PICTURE_PATH="./pictures"
+
+# Access values for the S3 bucket if `PICTURE_STORAGE_TYPE=s3`.
+# Not needed otherwise.
+#PIC_S3_URL=https://s3.example.com
+#PIC_S3_BUCKET=my_bucket
+#PIC_S3_REGION=example
+# default: true
+#PIC_S3_PATH_STYLE=true
+#PIC_S3_KEY=s3_key
+#PIC_S3_SECRET=s3_secret
