--- a/src/models/Cargo.toml
+++ b/src/models/Cargo.toml
@@ -62,6 +62,7 @@ rio_api = { workspace = true }
 rio_turtle = { workspace = true }
 rust-embed = { workspace = true }
 rsa = { workspace = true }
+s3-simple = { workspace = true }
 semver = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
