configurable `PICTURE_UPLOAD_LIMIT_MB`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1260,6 +1260,8 @@ WEBAUTHN_NO_PASSWORD_EXPIRY=true
 # instance deployments, file storage to local disk is available
 # as well, but this must not be used with multi replica / HA
 # deployments.
+# Images will ba reduced in size to max 192px on the longest side.
+# They most often end up between 25 - 40kB in size.
 #
 # Available options: db file s3
 # Default: db
@@ -1279,3 +1281,7 @@ WEBAUTHN_NO_PASSWORD_EXPIRY=true
 #PIC_S3_PATH_STYLE=true
 #PIC_S3_KEY=s3_key
 #PIC_S3_SECRET=s3_secret
+
+# Set the upload limit for user picture uploads in MB.
+# default: 10
+#PICTURE_UPLOAD_LIMIT_MB=10
