save file extension for pictures + sanitize SVGs

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1265,7 +1265,7 @@ WEBAUTHN_NO_PASSWORD_EXPIRY=true
 #
 # Available options: db file s3
 # Default: db
-#PICTURE_STORAGE_TYPE="db"
+PICTURE_STORAGE_TYPE="s3"
 
 # If `PICTURE_STORAGE_TYPE=file`, the path where pictures will be
 # saved can be changed with this value.
