create integration test for user pictures

--- a/src/bin/Cargo.toml
+++ b/src/bin/Cargo.toml
@@ -46,7 +46,7 @@ rauthy-api-types = { path = "../api_types" }
 ed25519-compact = { workspace = true }
 josekit = "0.8"
 pretty_assertions = "1"
-reqwest = { workspace = true }
+reqwest = { workspace = true, features = ["multipart"] }
 ring = { workspace = true }
 serde = "1"
 tokio-test = "*"
