update changelog + cleanup

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1277,11 +1277,27 @@ WEBAUTHN_NO_PASSWORD_EXPIRY=true
 #PIC_S3_URL=https://s3.example.com
 #PIC_S3_BUCKET=my_bucket
 #PIC_S3_REGION=example
-# default: true
-#PIC_S3_PATH_STYLE=true
 #PIC_S3_KEY=s3_key
 #PIC_S3_SECRET=s3_secret
+# default: true
+#PIC_S3_PATH_STYLE=true
 
 # Set the upload limit for user picture uploads in MB.
 # default: 10
 #PICTURE_UPLOAD_LIMIT_MB=10
+
+# By default, user pictures can only be fetched with a valid
+# session, an API Key with access to Users + Read, or with a
+# valid token for this user. However, depending on where and
+# how you are using Rauthy for your user management, you may
+# want to make user pictures available publicly without any
+# authentication.
+#
+# User Picture URLs are "safe" in a way that you cannot guess
+# a valid URL. You will need to know the User ID + the Picture
+# ID. Both values are generated cryptographically secure in the
+# backend during creation. The Picture ID will also change
+# with every new upload.
+#
+# default: false
+#PICTURE_PUBLIC=false
