--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1263,9 +1263,9 @@ WEBAUTHN_NO_PASSWORD_EXPIRY=true
 # Images will ba reduced in size to max 192px on the longest side.
 # They most often end up between 25 - 40kB in size.
 #
-# Available options: db file s3
+# Available options: db file s3 disabled
 # Default: db
-#PICTURE_STORAGE_TYPE="db"
+#PICTURE_STORAGE_TYPE="disabled"
 
 # If `PICTURE_STORAGE_TYPE=file`, the path where pictures will be
 # saved can be changed with this value.
