fix typo in docs

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -947,7 +947,7 @@ EVENT_LEVEL_FAILED_LOGIN=info
 # Languages for all user-facing pages.
 # Available Options: en de zhhans ko
 #FILTER_LANG_COMMON="en de zhhans ko"
-# Languages for the admin UI.
+# Languages for the Admin UI.
 # Available Options: en de
 #FILTER_LANG_ADMIN="en de"
 
