drop `sqlx::sqlite` in favor of `rusqlite` for DB migrations

--- a/src/error/Cargo.toml
+++ b/src/error/Cargo.toml
@@ -21,6 +21,7 @@ hiqlite = { workspace = true }
 image = { workspace = true }
 reqwest = { workspace = true }
 rio_turtle = { workspace = true }
+rusqlite = { workspace = true }
 ruma = { workspace = true }
 s3-simple = { workspace = true }
 serde = { workspace = true }
