--- a/rauthy-client/Cargo.toml
+++ b/rauthy-client/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "rauthy-client"
-version = "0.6.1"
+version = "0.7.0-20240311"
 edition = "2021"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "Apache-2.0"
-rust-version = "1.71.1"
+rust-version = "1.85.0"
 categories = ["web-programming"]
 keywords = ["rauthy", "rauthy-client", "oidc"]
 description = "rauthy-client - Client for the Rauthy OIDC IAM project"
@@ -30,16 +30,16 @@ userinfo = []
 [dependencies]
 # common
 base64 = "0.22.0"
-bincode = "1.3.3"
-cached = { version = "0.54", features = [] }
+bincode = { version = "2", default-features = false, features = ["std", "serde"] }
+cached = { version = "0.55.1", features = [] }
 chacha20poly1305 = { version = "0.10.1", features = ["std"] }
 chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde", "std"] }
 jwt-simple = { version = "0.12.6", default-features = false, features = ["pure-rust"] }
-rand = "0.8.5"
+rand = "0.9"
 reqwest = { version = "0.12.12", default-features = false, features = [
     "brotli", "json", "rustls-tls", "rustls-tls-webpki-roots"
 ] }
-ring = "0.17.5"
+ring = "0.17.13"
 serde = { version = "1.0.180", features = ["derive"] }
 serde_json = "1.0.100"
 thiserror = { version = "2" }
@@ -59,7 +59,3 @@ qrcode = { version = "0.14.0", optional = true }
 
 # make minimal versions happy
 actix-macros = { version = "0.2.4", optional = true }
-
-[dev-dependencies]
-pretty_assertions = "1"
-rstest = "0.23"
