parse `LOCAL_TEST` at startup and rename config files accordingly

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -29,6 +29,19 @@ DEV_DPOP_HTTP=true
 # default: false
 HQL_INSECURE_COOKIE=true
 
+# Can be set to 'true' for local testing a container image.
+# This will load values from './rauthy-local_test.cfg' instead
+# of './rauthy.cfg'.
+# The local test config has some values set that are not a good
+# choice for production, but make local testing quick and easy.
+#
+# NOTE: Setting this value inside this config has no effect.
+#       It must be provided as an env var beforehand.
+#       Listed here only for completeness.
+#
+# default: false
+#LOCAL_TEST=false
+
 #####################################
 ############## ACCESS ###############
 #####################################
