--- a/rauthy-local_test.cfg
+++ b/rauthy-local_test.cfg
@@ -20,6 +20,15 @@
 # (default: false)
 OPEN_USER_REG=true
 
+# You can set different security levels for Rauthy's cookies.
+# The safest option would be 'host', but may not be desirable when
+# you host an application on the same origin behind a reverse proxy.
+# In this case you might want to restrict to 'secure', which will then
+# take the COOKIE_PATH from below into account.
+# The last option is 'danger-insecure' which really should never be used
+# unless you are just testing on localhost and you are using Safari.
+COOKIE_MODE=danger-insecure
+
 #####################################
 ############# CLUSTER################
 #####################################
