add config var `LOGOUT_TOKEN_LIFETIME`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -227,6 +227,18 @@ SUSPICIOUS_REQUESTS_BLACKLIST=1440
 SUSPICIOUS_REQUESTS_LOG=true
 
 #####################################
+######## BACKCHANNEL LOGOUT #########
+#####################################
+
+# The lifetime / validity for Logout Tokens in seconds.
+# These Logout Tokens are being generated during OIDC
+# Backchannel Logout requests to configured clients.
+# The token lifetime should be as short as possible and
+# at most 120 seconds.
+# default: 30
+LOGOUT_TOKEN_LIFETIME=30
+
+#####################################
 ############# BACKUPS ###############
 #####################################
 
