--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -238,6 +238,30 @@ SUSPICIOUS_REQUESTS_LOG=true
 # default: 30
 LOGOUT_TOKEN_LIFETIME=30
 
+# You can allow a clock skew during the validation of
+# Logout Tokens, when Rauthy is being used as a client
+# for an upstream auth provider that uses backchannel
+# logout.
+#
+# The allowed skew will be in seconds and a value of
+# e.g. 5 would mean, that 5 seconds are added to the
+# `iat` and `exp` claim validations and expand the range.
+#
+# default: 5
+LOGOUT_TOKEN_ALLOW_CLOCK_SKEW=5
+
+# The maximum allowed lifetime for Logout Tokens.
+# This value is a security check for upstream auth
+# providers. If Rauthy receives a Logout Token, it will
+# check and validate, that the difference between `iat`
+# and `exp` is not greater than LOGOUT_TOKEN_ALLOWED_LIFETIME.
+# This means Rauthy will reject Logout Tokens from clients
+# with a way too long validity and therefore poor
+# implementations. The RFC states that tokens should
+# be valid for at most 120 seconds.
+# default: 120
+LOGOUT_TOKEN_ALLOWED_LIFETIME=120
+
 #####################################
 ############# BACKUPS ###############
 #####################################
