--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -17,6 +17,7 @@ cryptr = { workspace = true }
 jwt-simple = { workspace = true }
 openssl = { workspace = true }
 openssl-sys = { workspace = true }
+reqwest = { workspace = true }
 ring = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
