scheduler for backchannel logout retries + config vars for insecure requests and retry limit

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -230,6 +230,25 @@ SUSPICIOUS_REQUESTS_LOG=true
 ######## BACKCHANNEL LOGOUT #########
 #####################################
 
+# The maximum amount of retries made for a failed backchannel logout.
+# Failed backchannel logouts will be retried every 60 - 90 seconds
+# from all cluster nodes. The timeout between retries is randomized
+# to avoid overloading clients. It will be executed on each cluster
+# member to increase the chance of a successful logout in case of
+# network segmentations.
+# default: 100
+BACKCHANNEL_LOGOUT_RETRY_COUNT=100
+
+# Can be set to `true` to allow plain HTTP backchannel
+# logout requests.
+# default: false
+BACKCHANNEL_DANGER_ALLOW_HTTP=false
+
+# Can be set to `true` to allow insecure HTTPS logout requests.
+# This will disable TLS certificate validation.
+# default: false
+BACKCHANNEL_DANGER_ALLOW_INSECURE=false
+
 # The lifetime / validity for Logout Tokens in seconds.
 # These Logout Tokens are being generated during OIDC
 # Backchannel Logout requests to configured clients.
