--- a/src/schedulers/Cargo.toml
+++ b/src/schedulers/Cargo.toml
@@ -9,6 +9,7 @@ license.workspace = true
 rauthy-common = { path = "../common" }
 rauthy-error = { path = "../error" }
 rauthy-models = { path = "../models" }
+rauthy-service = { path = "../service" }
 
 actix-web = { workspace = true }
 chrono = { workspace = true }
@@ -16,6 +17,7 @@ cron = { workspace = true }
 hiqlite = { workspace = true }
 openssl = { workspace = true }
 openssl-sys = { workspace = true }
+rand = { workspace = true }
 semver = { workspace = true }
 sqlx = { workspace = true }
 tracing = { workspace = true }
