additional safeguards and fixes for `MIGRATE_DB_FROM`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -476,7 +476,7 @@ DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 # !!! USE WITH CARE !!!
 #
 #MIGRATE_DB_FROM=sqlite:data/state_machine/db/hiqlite.db
-#MIGRATE_DB_FROM=postgresql://postgres:123SuperSafe@localhost:5432/rauthy
+#MIGRATE_DB_FROM=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 
 # Hiqlite is the default database for Rauthy.
 # You can opt-out and use Postgres instead by setting the proper
