update dev + test cfgs to make backchannel logout tests succeed

--- a/rauthy-test.cfg
+++ b/rauthy-test.cfg
@@ -77,3 +77,6 @@ ENABLE_SOLID_AUD=true
 EPHEMERAL_CLIENTS_ALLOWED_FLOWS="authorization_code refresh_token"
 
 ENABLE_DYN_CLIENT_REG=true
+
+BACKCHANNEL_DANGER_ALLOW_HTTP=true
+BACKCHANNEL_DANGER_ALLOW_INSECURE=true
