--- a/src/error/Cargo.toml
+++ b/src/error/Cargo.toml
@@ -14,6 +14,7 @@ chacha20poly1305 = { workspace = true }
 chrono = { workspace = true }
 css-color = { workspace = true }
 cryptr = { workspace = true }
+deadpool = { workspace = true }
 hiqlite = { workspace = true }
 image = { workspace = true }
 openssl = { workspace = true }
@@ -31,6 +32,7 @@ spow = { workspace = true }
 sqlx = { workspace = true }
 svg-hush = { workspace = true }
 time = { workspace = true }
+tokio-postgres = { workspace = true }
 tracing = { workspace = true }
 utoipa = { workspace = true }
 validator = { workspace = true }
