make sure `just run postgres` works again with both DB drivers in parallel

--- a/src/error/Cargo.toml
+++ b/src/error/Cargo.toml
@@ -33,6 +33,7 @@ sqlx = { workspace = true }
 svg-hush = { workspace = true }
 time = { workspace = true }
 tokio-postgres = { workspace = true }
+tokio-pg-mapper = { workspace = true }
 tracing = { workspace = true }
 utoipa = { workspace = true }
 validator = { workspace = true }
