--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -462,11 +462,6 @@ HQL_SECRET_API=SuperSecureSecret1337
 #
 DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 
-# Max DB connections for the Postgres pool.
-# Irrelevant for Hiqlite.
-# default: 20
-#DATABASE_MAX_CONN=20
-
 # If specified, the currently configured Database will be
 # DELETED and OVERWRITTEN with a migration from the given
 # database with this variable. Can be used to migrate between
@@ -552,6 +547,19 @@ HQL_PASSWORD_DASHBOARD=JGFyZ29uMmlkJHY9MTkkbT0zMix0PTIscD0xJE9FbFZURnAwU0V0bFJ6Z
 #
 # default: 30
 #HEALTH_CHECK_DELAY_SECS=30
+
+# postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
+PG_HOST=localhost
+# default: 5432
+PG_PORT=5432
+PG_USER=rauthy
+PG_PASSWORD=123SuperSafe
+# default: rauthy
+PG_DB_NAME=rauthy
+
+# Max DB connections for the Postgres pool.
+# default: 20
+PG_MAX_CONN=20
 
 # Disables the housekeeping schedulers (default: false)
 #SCHED_DISABLE=true
