--- a/src/bin/Cargo.toml
+++ b/src/bin/Cargo.toml
@@ -30,6 +30,9 @@ rustls-pki-types = { workspace = true }
 rustls-pemfile = { workspace = true }
 serde_json = { workspace = true }
 spow = { workspace = true }
+tokio-postgres = { workspace = true }
+tokio-pg-mapper = { workspace = true }
+tokio-pg-mapper-derive = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tokio = { workspace = true }
