--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -466,12 +466,24 @@ DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 # DELETED and OVERWRITTEN with a migration from the given
 # database with this variable. Can be used to migrate between
 # different databases.
-# To migrate from Hiqlite, use the `sqlite:` prefix.
+# To migrate from Hiqlite, use the `sqlite:path/to/database.sqlite` format.
+# To migrate from postgres, just set `postgres` and then all the
+# `MIGRATE_PG_*` values below.
 #
 # !!! USE WITH CARE !!!
 #
 #MIGRATE_DB_FROM=sqlite:data/state_machine/db/hiqlite.db
 #MIGRATE_DB_FROM=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
+
+# If `MIGRATE_DB_FROM=postgres`, these values are mandatory to open the
+# database connection to the Postgres database you want to migrate away from.
+MIGRATE_PG_HOST=localhost
+# default: 5432
+MIGRATE_PG_PORT=5432
+MIGRATE_PG_USER=rauthy
+MIGRATE_PG_PASSWORD=123SuperSafe
+# default: rauthy
+MIGRATE_PG_DB_NAME=rauthy
 
 # Hiqlite is the default database for Rauthy.
 # You can opt-out and use Postgres instead by setting the proper
