tests are green

--- a/rauthy-test.cfg
+++ b/rauthy-test.cfg
@@ -6,7 +6,9 @@
 # !!! DO NOT USE IN PRODUCTION !!!
 DEV_MODE=true
 
-DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
+PG_HOST=localhost
+PG_USER=rauthy
+PG_PASSWORD=123SuperSafe
 
 AUTH_HEADERS_ENABLE=true
 
