--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -19,6 +19,7 @@ openssl = { workspace = true }
 openssl-sys = { workspace = true }
 reqwest = { workspace = true }
 ring = { workspace = true }
+scim_v2 = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tracing = { workspace = true }
