feat: add SMTP_PORT option and remove SMTP_DANGER_INSECURE_PORT.

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -729,6 +729,7 @@ EMAIL_SUB_PREFIX="Rauthy IAM"
 # You might want to set `SMTP_DANGER_INSECURE=true` if you
 # need this for local dev.
 SMTP_URL=localhost
+#SMTP_PORT=
 #SMTP_USERNAME=
 #SMTP_PASSWORD=
 # Format: "Rauthy <rauthy@localhost.de>"
@@ -747,16 +748,9 @@ SMTP_CONNECT_RETRIES=3
 # unauthenticated SMTP connection to an SMTP relay on your localhost
 # or for development purposes.
 # When set to `true`, `SMTP_USERNAME` and `SMTP_PASSWORD` will be
-# ignored and you can modify the target port with
-# `SMTP_DANGER_INSECURE_PORT`.
+# ignored and SMTP_PORT will default to 1025.
 # default: false
 SMTP_DANGER_INSECURE=true
-
-# The port for an insecure SMTP relay.
-# This will most likely be used for testing only.
-# It will only be taken into account if `SMTP_DANGER_INSECURE=true` is set.
-# default: 1025
-#SMTP_DANGER_INSECURE_PORT=1025
 
 #####################################
 ###### ENCRYPTION / HASHING #########
