impl `ScimClient::sync_groups()` + `ScimClient::create_group()` + `ScimClient::update_group()`

--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -24,6 +24,7 @@ openssl-sys = { workspace = true }
 rand = { workspace = true }
 rand_core = { workspace = true }
 regex = { workspace = true }
+reqwest = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 
