rework `failed_scim_tasks` table and impl retry cron job for failed tasks

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1158,6 +1158,15 @@ POW_EXP=30
 SCIM_SYNC_DELETE_GROUPS=true
 SCIM_SYNC_DELETE_USERS=true
 
+# The maximum amount of retries made for a failed SCIM task.
+# Failed tasks will be retried every 60 - 90 seconds from all
+# cluster nodes. The timeout between retries is randomized to
+# avoid overloading clients. It will be executed on each cluster
+# member to increase the chance of a update in case of network
+# segmentations.
+# default: 100
+SCIM_RETRY_COUNT=100
+
 #####################################
 ############# SERVER ################
 #####################################
